--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,91 @@
 html {
   box-sizing: border-box;
 }
-
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
 
+li {
+  list-style: none;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
-  /*
+  /* /*
    * CSS image reference example.
    */
-  background-image: url('./images/bg-pattern.png');
+  /* background-image: url('./images/bg-pattern.png'); */
+}
+.search-form {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.search-form > input {
+  width: 300px;
+  height: 50px;
+  text-align: center;
+  font-size: 30px;
+}
+.item {
+  display: flex;
+  margin-right: 15px;
+  margin-bottom: 50px;
+}
+
+.gallery {
+  margin-top: 0;
+  margin-bottom: 10px;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.gallery-image {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  object-fit: cover;
+}
+.photo-card {
+  width: 280px;
+  height: 200px;
+}
+
+.button-holder {
+  display: flex;
+  justify-content: center;
+}
+.button {
+  border: 1px solid transparent;
+  border-radius: 4px;
+  width: 150px;
+  height: 50px;
+  background-color: #f5f4fa;
+}
+.button.is-hidden {
+  display: none;
+}
+/* .stats.is-hidden {
+  display: none;
+} */
+
+.stats {
+  padding-top: 5px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.stats-item {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
 }
